[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sstable-experiments"
version = "0.1.0"
description = "Python-driven RocksDB SSTable experiments and visualisations."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Reserved for the pybind11 pass-2 native extension.
native = ["pybind11>=2.12", "scikit-build-core>=0.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sstable_experiments*"]
